<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#5286EF"
        tools:context=".view.MainActivity" >

        <Button
            android:id="@+id/btnContinuar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/satisfy"
            android:text="@string/btnContinuar"
            app:layout_constraintEnd_toEndOf="@+id/btnNovoJogo"
            app:layout_constraintStart_toStartOf="@+id/btnNovoJogo"
            app:layout_constraintTop_toBottomOf="@+id/btnNovoJogo" />

        <Button
            android:id="@+id/btnNovoJogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="296dp"
            android:fontFamily="@font/satisfy"
            android:text="@string/btnNovoJogo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnConfiguracoes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/satisfy"
            android:text="@string/btnConfigurar"
            app:layout_constraintEnd_toEndOf="@+id/btnContinuar"
            app:layout_constraintStart_toStartOf="@+id/btnContinuar"
            app:layout_constraintTop_toBottomOf="@+id/btnContinuar" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/satisfy"
            android:text="TETRIS"
            android:textColor="#000000"
            android:textSize="36sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteY="54dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>